# clipd

./: .gitignore  Cargo.toml  README.md  clipd  clipd_client.py  clipd_server.py  config.ini  defs.py
etc/: client.toml  clipd.service
src/: frame.rs  main.rs
